feat: Add Result Pattern support